2014-12-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Impose a 10-million limit on dimensions
	when reading a PNG file.

2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with improvements since previous release.

2014-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/statistics.c (GetImageStatistics): Failed to compute
	statistics for the Black channel of CMYK image files.  Problem
	reported by Michael Below via Debian bug 773552:
	"graphicsmagick-imagemagick-compat: convert to cmyk leaves k
	channel empty".

2014-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (InvokeDelegate): Windows spawnvp() splits
	arguments into more arguments.  Add escaping to avoid the
	splitting.  Resolves SourceForge bug #276 "dcraw 9.19 included
	with gm 1.3.20 doesn't support paths with spaces."

	* magick/utility.c (TranslateTextEx): Fix regression added on
	2014-12-13 (yesterday) which caused output file name passed to
	delegate programs to be wrong.

	* magick/annotate.c (RenderFreetype): Fix regression added in
	1.3.19 which caused spurious drawing errors to be produced while
	rendering with text when all of the text is off the left-hand side
	of the image.

2014-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CompareUsage): Options should be listed in
	alphabetical order.

	* magick/annotate.c (RenderFreetype): Immediately quit processing
	and return an error if SyncImagePixels() reports a problem.

	* coders/psd.c (ReadPSDImage): Return with an error right away if
	SetImageEx() (to create solid-color background canvas) reports a
	failure.

	* magick/annotate.c (AnnotateImage): Document all of the
	attributes which are supported.

	* magick/utility.c (TranslateTextEx): Assure that attributes
	requiring ImageInfo pointer are skipped.  AnnotateImage() does not
	pass ImageInfo.  Also document all of the attributes which are
	supported.
