@@ -1,3 +1,10 @@
+2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/tiff.c (QuantumTransferMode): Fix quantum transfer
+	handling for photometrics which might deliver one or three samples
+	per pixel.  These were assuming that three samples were always
+	provided.
+
 2014-12-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
 	* coders/png.c: Impose a 10-million limit on dimensions
